# Minutero

./: .gitignore  Cargo.toml  README.md  transcripcion.md
.github/workflows/: release.yml
minutero/: index.html  main.py
minutero/config/: settings.py
minutero/core/: audio_manager.py  model_factory.py  models.py  transcription_engine.py
minutero/plugins/: whisper_model.py
minutero/utils/: logger.py
src/: audio.rs  data.rs  main.rs  system_audio.rs  ui.rs  video.rs
