[package]
name = "transcriptor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.*"
chrono = "0.4.*"
cpal = "0.16.*"
eframe = "0.33.*"
egui = "0.33.*"
futures-util = "0.3.*"
num-traits = "0.2.*"
rubato = "0.16.*"
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.*", features = ["full"] }
whisper-rs = {version="0.15.*", features=["cuda"]}

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"