[package]
name = "transcriptor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
cpal = "0.17.3"
eframe = "0.33.3"
egui = "0.33.3"
futures-util = "0.3.32"
num-traits = "0.2.19"
rubato = "1.0.1"
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.50.0", features = ["full"] }
whisper-rs = {version="0.16.0", features=["cuda"]}

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.183"